--- a/project_template.tex
+++ b/project_template.tex
@@ -11,7 +11,7 @@
 \renewcommand{\baselinestretch}{1.0}
 \linespread{1.0}
 
-% load miscellaneous packages
+% load miscellaneo`us packages
 \usepackage{csquotes}
 \usepackage[american]{babel}
 \usepackage[usenames,dvipsnames]{color}
