Updates from Overleaf

--- a/data.tex
+++ b/data.tex
@@ -55,18 +55,12 @@ The World Development Indicators dataset has been sourced from international org
 
 
     \subsection{Data Acquisition 1 (World Bank World Development Indicators Data Bank)}
-
-\begin{enumerate}
-    \item Open the web browser 
-       \item  Open the official World Bank World Development Indicators Data Bank page
-       \item Clear all selections
-       \item Select all countries, all times, and only the variables listed in "Key Variables, Data Set 1", or by opening the Data folder and downloading  "P\_Data\_Extract\_From\_World\_Development\_Indicators (1).xlsx"
-
-       \item Click on the Excel download link to download the .xlsx file
     
-\end{enumerate}
+Open the web browser and navigate to the official World Bank World Development Indicators Data Bank page. Clear all previous selections, " Finally, click on the Excel download link to download the .xlsx file.
+Open the web browser and navigate to the official World Bank World Development Indicators Data Bank page. Clear all previous selections. " Finally, click on the Excel download link to download the .xlsx file.
 
     \subsection{Data Acquisition 2 (Penn World Table (PWT) version 10.01)}
+    
 \begin{enumerate}
 \item Open the web browser 
 
@@ -75,7 +69,7 @@ The World Development Indicators dataset has been sourced from international org
 \item Click on the Stata download link to download the .dta file
 
 \end{enumerate}
-All data is stored in the \href{https://github.com/ecn310/course-project-development/issues/12}{github folder} 
+All data is stored in the \href{https://github.com/ecn310/course-project-development/issues/12}{Github folder} 
 
 
 
@@ -106,18 +100,11 @@ We will merge the World Bank World Development Indicators, which contains popula
 
 \subsection{Data Set 1 (World Bank: World Development Indicators)}
 
-\begin{itemize}
-    \item GNI per capita, PPP (current international in USD) - Ratio Scale 
-    \item Population growth: annual percent -  Ratio Scale 
-    \item Life expectancy: low mortality rate can aid in employment - Nominal/Ratio Scale 
-\end{itemize}
+In Dataset One, to understand the development patterns related to manufacturing, we have selected variables that are closely linked to manufacturing employment. These include GNI per capita, PPP (current international USD) – Ratio Scale, Population growth (annual percent) – Ratio Scale, and Life expectancy (low mortality rate, which can support employment) – Nominal/Ratio Scale.
+  
 
 \subsection{Data Set 2 (Penn World Table (PWT) version 10.01)}
-\begin{itemize}
-   \item rgdpo: Real GDP output-side, used to measure economic growth - Ratio Scale
-   \item emp: Total employment, providing insight into labor market trends. - Ratio Scale 
-   \item pop: Population, to calculate per capita measures like GDP per capita. - Ratio Scale
-\end{itemize}
 
+In Dataset two, to explore economic growth and labor market trends, we have chosen variables that provide key insights into these areas. These include RGDPO (Real GDP output-side), which measures economic growth – Ratio Scale, Total employment, offering a view into labor market dynamics – Ratio Scale, and Population, which allows for the calculation of per capita indicators such as GDP per capita – Ratio Scale.
 
 \end{document}
