--- a/Development_report.tex
+++ b/Development_report.tex
@@ -66,27 +66,26 @@ Answer the questions
 
 % Discuss at least five papers that are closely related to your results (more is better). Explain how they're related. Did you find something similar, or different? Did you look at a different context? Different time period? Different level of detail?
 
-Industrialization continues to be a critical driver of economic growth and development, but manufacturing has increasingly become concentrated in a few countries. The Industrial Revolution, which began in Britain around the late 18th century, catalyzed this economic shift, with nations like Britain leading in technological advancements and rising per capita incomes by the early 19th century (Allen, 2009). However, as of the 21st century, manufacturing sectors have become concentrated in specific regions, with developing nations like those in Africa and parts of Asia still struggling to catch up (Rodrik, 2016). Despite these disparities, the overall significance of industrialization has not diminished, but its unequal distribution continues to contribute to income gaps that emerged as early as the mid-19th century (Pomeranz, 2000).
+Industrialization continues to be a critical driver of economic growth and development, but manufacturing has increasingly become concentrated in some countries. The Industrial Revolution, which began in Britain around the late 18th century, catalyzed this economic shift, with nations like Britain leading in technological advancements and rising per capita incomes by the early 19th century (Allen, 2009). However, in the 21st century, manufacturing sectors have become concentrated in specific regions, with developing nations like those in Africa and parts of Asia still struggling to catch up (Rodrik, 2016). Despite these disparities, the overall significance of industrialization has not diminished, but its unequal distribution continues to contribute to income gaps that emerged as early as the mid-19th century (Pomeranz, 2000).
 
 \section{Theoretical Analysis}
 \label{sec:theory}
 %Optional–may include in intro if it’s short.
-In this paper, we examine the hypothesis that there is a negative relationship between manufacturing employment and GDP; As manufacturing employment decreases, GDP increases. This idea stems from the economic transformation seen in advanced nations, where progress in technology and the rise of service-based industries have reduced reliance on manufacturing labor, yet continued to fuel GDP expansion. Developed economies, leveraging automation and innovation, achieve greater productivity with a smaller manufacturing workforce. In contrast, developing nations, which tend to have lower GDP per capita, still depend on labor-intensive manufacturing, reflecting their earlier stage of industrialization. This theoretical perspective forms the basis for our empirical investigation into the relationship between manufacturing employment and economic growth across different stages of development.
+This paper examines how manufacturing employment has affected growth development over time and place. Explicitly, we look at how the manufacturing employment sector will impact the gross domestic product per capita (GDP per capita) in developed and developing countries. Within our data analysis, we have observed that the correlation is different in developed and developing countries. In contrast, in developed countries, we can see a negative and positive correlation within developing countries. As manufacturing employment decreases, GDP increases in developed regions, and as manufacturing employment increases, so does GDP per capita in developing countries. This idea stems from the economic transformation seen in advanced nations, where progress in technology and the rise of service-based industries have reduced reliance on manufacturing labor yet continued to fuel GDP expansion. Using automation and innovation, developed economies achieve greater productivity with a smaller manufacturing workforce. In contrast, developing nations with lower GDP per capita base their growth on using natural resources and a heavy dependence on agricultural growth. In addition, they have a great potential for manufacturing employment, as they have a high low-wage labor market. This theoretical perspective forms the basis for our empirical investigation into the relationship between manufacturing employment and economic growth in different stages of development.
 
 
 \section{Data}
 \label{sec:data}
 
 
-The Our World in Data chart data gives us an overview of the different world indicators that estimate the position of each country's economy and development projection. Each data point is supposed to help show how manufacturing employment and economic growth rates have changed over the years using indicators for each country. Two variables, "Manufacturing jobs as a share of total employment" and "GDP per Capita," were sectioned into developing and developed to observe the effects of manufacturing employment on developing and developed countries' growth rates.
+The Our World in Data chart data gives us an overview of the different world indicators that estimate the position of each country's economy and development projection. The Data chart dataset has been sourced from international organizations, national statistical agencies, and multiple surveys that cover social, economic, and environmental indicators for nearly all countries from 1990 to the present day Each data point is supposed to help show how manufacturing employment and GDP have changed over the years using indicators for each country. We sectioned two variables, ``Manufacturing jobs as a share of total employment'' and ``GDP per Capita,'' into developing and developed to observe the effects of manufacturing employment on developing and developed countries' growth rates.
 
-The Our World in Data chart dataset has been sourced from international organizations, national statistical agencies, and multiple surveys that cover social, economic, and environmental indicators for nearly all countries from 1990 to the present day. It includes over a hundred variables, but the most important ones are GDP per capita and Manufacturing jobs as a share of total employment, which offer a detailed insight into development trends on a global scale. The number of variables and observations varies depending on the year, with data provided for up to 20,000 country-year combinations across more than one indicator. This data is crucial for policymakers as it offers critical insights and long-term patterns for development across different regions of the world.
+The Our World in Data set includes over a hundred variables, but we solely focus on GDP per capita and Manufacturing jobs as a share of total employment, which offer a detailed insight into development trends on a global scale. The data provided in this data is crucial for policymakers as it offers critical insights and long-term patterns for development across different regions of the world.
 
-To find our data we opened the web browser, navigated to the Our World in Data website, \href{https://github.com/ecn310/course-project-development/issues/12}{Github folder} and clicked on the "Resources" section. We then looked up the first variable, "Manufacturing jobs as a share of total employment," Bank World Development Indicators Data Bank page. Once the variable has been selected, we chose the chart view, deselected all the pre-opted categories, and chose the "GDP per capita" filter in the "sort by" field. For our purposes, we have taken that any country with a GDP per Capita equal to or greater than 20,000 USD will be considered a developed country and below as developing. Once the data is categorized, we manually selected all countries, then click on the download, clicking on the "Data" option before downloading the data set completely. 
+For our purposes, we have taken that any country with a GDP per Capita equal to or greater than 20,000 USD will be considered a developed country and below as developing. 
 
-To prepare the data for an accurate analysis, we plan to follow a series of standardized steps on which we can expand on subsequently. Firstly, we import the data in Stata from Our World in Data. We then check for outliers using the command "codebook" to verify the integrity of the data, either replacing the missing information with a known value or, if this is not available, deleting the variable from our dataset.  For OWD data, we reshaped it wide to long for easier interpretation and to identify the right values as our variables, we also took out the year 2020 as it caused some discrepancy to our data due to missing information during Covid. 
 
-The data set is integral, in order for us to tabulate certain variables for improved readability and to form initial causal links. We are working with variables, such as GDP, and manufacturing employment within the data set. A correlation test will be conducted to compare developing to developed countries and economies, and we will graph our two main variables, GDP and manufacturing employment. In a comparative analysis, we would use "codebook" to establish how often a variable is present in a dataset, and also to be able to derive and analyze the mean, median, and standard variation.
+The data set is integral, for us to tabulate certain variables to form initial descriptive links. We are working with variables, such as GDP, and manufacturing employment within the data set. In a comparative analysis, we would use "codebook" to establish how often a variable is present in a dataset, and also to be able to derive and analyze the mean, median, and standard variation.
 
 
 
@@ -95,20 +94,81 @@ The data set is integral, in order for us to tabulate certain variables for impr
 \section{Results}
 \label{sec:result}
 
+The analysis evaluated the relationship between manufacturing employment and GDP per capita across developed and developing countries from 1990 to 2019. Descriptive statistics revealed distinct patterns between these two groups, reflecting their varying stages of industrialization and economic growth.
 
-The analysis evaluated the relationship between manufacturing employment and GDP per capita across developed and developing countries from 1990 to 2019. Descriptive statistics revealed distinct differences between the two groups. In developing countries, the mean manufacturing employment share was 10.5\%, with a standard deviation of 4.9\%, indicating relatively low levels of industrialization and significant variability among countries. The mean GDP per capita for developing nations was \$18,307, with a standard deviation of \$20,344, highlighting substantial economic disparity and uneven development. In contrast, developed countries had a higher mean manufacturing employment share of 14.2\% and a slightly higher standard deviation of 5.8\%, reflecting more advanced industrial structures with moderate variation. The mean GDP per capita in developed countries was significantly higher at \$40,364, with a standard deviation of \$21,944, suggesting greater economic stability and consistency.
+\subsection{Descriptive Statistics}
 
-Graphical analysis further illustrated these trends. In developing countries, manufacturing employment shares exhibited fluctuations but generally declined after 2010, while GDP per capita followed a steady upward trajectory. This divergence suggests that economic growth in developing nations is increasingly influenced by factors beyond manufacturing, such as technological adoption or the expansion of service sectors. In developed countries, manufacturing employment shares consistently declined over the study period, reflecting ongoing de-industrialization. However, GDP per capita showed steady growth, showing the role of advanced industries and high-productivity sectors in sustaining economic progress.
+\textbf{In developing countries:}
+\begin{itemize}
+\item \textbf{Manufacturing employment share:} Mean of 10.55 percent, with a standard deviation of 4.88 percent. This indicates relatively low levels of industrialization and significant variability among countries.
+\item \textbf{GDP per capita:} Mean of 17,957.71 USD, with a standard deviation of 20,173.73 USD. This reflects both economic disparity and uneven development across regions.
+\end{itemize}
 
-These findings provide evidence supporting the hypothesis that manufacturing plays a more significant role in driving economic growth in developing countries compared to developed ones. The positive correlation in developing countries highlights the importance of industrialization during early stages of economic development. In contrast, the negative correlation in developed nations reflects the global transition toward service-oriented economies. The results show the uneven benefits of industrialization across regions and suggest the potential need for targeted policies to promote equitable growth. For developing countries, industrialization remains a crucial pathway to reducing economic disparity, while developed countries should focus on diversifying their economies to sustain growth.
+\textbf{In developed countries:}
+\begin{itemize}
+\item \textbf{Manufacturing employment share:} Mean of 14.38 percent and a standard deviation of 5.88 percent, reflecting more advanced industrial structures with moderate variation.
+\item \textbf{GDP per capita:} Mean of 36,008.51 USD, with a standard deviation of 21,577.48 USD, indicating greater economic stability and higher income levels.
+\end{itemize}
 
+\subsection{Correlation Analysis}
+A correlation test will be conducted to compare developing to developed countries and economies, and we will graph our two main variables, GDP and manufacturing employment.
+\begin{itemize}
+\item \textbf{Developing Countries:} The correlation between manufacturing employment share and GDP per capita was \textbf{0.2710}, with a p-value of 0.0000, indicating a positive relationship. This suggests that higher manufacturing employment shares are associated with higher GDP per capita, reinforcing the importance of industrialization in early stages of economic development.
+\item \textbf{Developed Countries:} The correlation between manufacturing employment share and GDP per capita was \textbf{-0.3601}, with a p-value of 0.0000, indicating a statistically significant negative relationship. This reflects the shift toward service-oriented economies in developed nations, where GDP growth continues despite declining manufacturing employment.
+\end{itemize}
+
+\subsection{Graphical Trends}
+
+
+\begin{itemize}
+\item \textbf{Developing countries:} 
+\begin{figure}
+    \centering
+    \includegraphics[width=0.5\linewidth]{GDP DEVELOPING GRAPH.png}
+    \caption{Enter Caption}
+    \label{fig:enter-label}
+\end{figure}
+\begin{figure}
+    \centering
+    \includegraphics[width=0.5\linewidth]{FINAL GRAPH MFT DEVELOPING.png}
+    \caption{Enter Caption}
+    \label{fig:enter-label}
+\end{figure}
+\item Manufacturing employment shares exhibited fluctuations but generally declined after 2010. However, GDP per capita followed a steady upward trajectory, suggesting that factors beyond manufacturing, such as technological adoption or service sector expansion, are driving economic growth.
+
+\item \textbf{Developed countries:} 
+\begin{figure}
+    \centering
+    \includegraphics[width=0.5\linewidth]{FINAL FINAL GDP DEVELOPED.png}
+    \caption{Enter Caption}
+    \label{fig:enter-label}
+\end{figure}
+\begin{figure}
+    \centering
+    \includegraphics[width=0.5\linewidth]{FINAL FINAL MANU DEVELOPED.png}
+    \caption{Enter Caption}
+    \label{fig:enter-label}
+\end{figure}
+
+\item Manufacturing employment shares consistently declined over the study period, reflecting ongoing de-industrialization. Despite this, GDP per capita showed steady growth, highlighting the role of advanced industries, automation, and high-productivity sectors in sustaining economic progress.
+\end{itemize}
+
+\subsection{Interpretation of Results}
+
+These findings support the hypothesis that manufacturing plays a more significant role in driving economic growth in developing countries compared to developed ones. The positive correlation in developing countries underscores the critical role of industrialization in early stages of economic growth. In contrast, the negative correlation in developed countries highlights the global transition toward service-oriented economies.
+
+This analysis also reveals the uneven benefits of industrialization across regions. Developing countries can leverage industrialization to reduce economic disparity, while developed countries must focus on diversifying their economies and embracing innovation to sustain growth.
+
+\subsection{Limitations}
+
+This study’s reliance on aggregate data may mask important variations between individual countries. Additionally, gaps in data reporting, especially in developing countries, could affect the validity of the results. Future research could incorporate more specific data and explore the effects of other sectors, such as technology and services, on GDP growth
 
 \section{Discussion}
 \label{sec:discussion}
 
 
 The analysis relies on aggregate data, which may mask important variations between countries. Further, many developing countries lack continuous data, with some years not reporting any numbers, causing sudden fluctuations in manufacturing data and its visual representation. On a similar note, the time frame for developed economies (2000–2019) and developing economies (1990–2019) varies, potentially affecting the consistency of the analysis.
-In developed countries, the progressive switch to tertiary industries plays a significant role in GDP changes, as demonstrated by a relatively low R-squared (0.129).
+In developed countries, the progressive switch to tertiary industries plays a significant role in GDP changes, as demonstrated by a relatively low R-squared.
 
 Further research should monitor future changes, directly seeking out data from respective government and independent sources, and filling in blanks.
 
@@ -116,7 +176,7 @@ Further research should monitor future changes, directly seeking out data from r
 \section{Conclusion}
 \label{sec:conclusion}
 
-Re-state (in different words) what you did and what you learned. If your discussion (Section 6) would be short, you can just have a Conclusion section that includes your discussion (that is, leave out a separate Discussion section).
+Manufacturing and economic growth are unequivocally linked. Previous literature has largely focused on the shift toward manufacturing across time, starting from the industrial revolution, and the income gaps that have risen across the world today.  We examined the relationship between manufacturing and GDP, and how this differs between developed and developing countries.
 
 \newpage
 \section*{Bibliography}
@@ -135,6 +195,6 @@ You can choose which citation style to follow. Whichever you choose, you must fo
 \section*{Data Appendix} \label{sec:appendixa}
 \addcontentsline{toc}{section}{Appendix A}
 
-You should at least direct your reader to your replication package. You might put key elements of your replication package in this section as well.
+Once the data is categorized, we manually selected all countries, then click on the download, clicking on the "Data" option before downloading the data set completely. 
 
 \end{document}
