Updates from Overleaf

--- a/Development_report.tex
+++ b/Development_report.tex
@@ -33,8 +33,8 @@ bookmarksopen=true,hyperfootnotes=false]{hyperref}
 
 
 \begin{document}
-\title{Insert title here}
-\author{Name 1\thanks{Syracuse University, Economics Department. Email: kbuzard@syr.edu.} \and Name 2\thanks{abc} \and Name 3\thanks{abc}}
+\title{Development: The link between Manufacturing Employment and GDP in Developed and Developing Countries}
+\author{Filippo Donà\thanks{Syracuse University, Economics Department. Email: kbuzard@syr.edu.} \and Lucia Rios-Luy\thanks{abc} \and Meghavarshini Iska \thanks{Syracuse University, Economics Student. Email: Meiska@syr.edu}}
 \date{\vskip-.1in \today}
 \maketitle
 
@@ -42,7 +42,11 @@ bookmarksopen=true,hyperfootnotes=false]{hyperref}
 \begin{center} {\bf Abstract} \end{center}
 
 \begin{quote}
-{\small Insert abstract text here: 75-200 words, very high-level summary of your project.}
+{\small We examine the link between GDP growth and manufacturing employment, hypothesizing that there is a negative relationship between manufacturing employment and GDP; As manufacturing employment decreases, GDP increases. We source statistics
+from Our World in Data charts, which examine these variables in all countries around the globe.
+We create a distinction between developing and developed countries, setting the threshold at USD 20.000 Annual GDP per capita. We conduct a correlation test to compare these variables across both economies. 
+The research conducted supports the hypothesis that manufacturing plays a more significant role in driving economic growth in developing countries compared to developed ones. The positive correlation in developing countries underscores the critical role of industrialization in early stages of economic
+growth. In contrast, the negative correlation in developed countries highlights the global transition.}
 \end{quote}
 
 \bigskip
@@ -87,15 +91,6 @@ For our purposes, we have taken that any country with a GDP per Capita equal to 
 
 The data set is integral, for us to tabulate certain variables to form initial descriptive links. We are working with variables, such as GDP, and manufacturing employment within the data set. In a comparative analysis, we would use "codebook" to establish how often a variable is present in a dataset, and also to be able to derive and analyze the mean, median, and standard variation.
 
-
-
-\subsection{Survey data}
-
-\section{Results}
-\label{sec:result}
-
-The analysis evaluated the relationship between manufacturing employment and GDP per capita across developed and developing countries from 1990 to 2019. Descriptive statistics revealed distinct patterns between these two groups, reflecting their varying stages of industrialization and economic growth.
-
 \subsection{Descriptive Statistics}
 
 \textbf{In developing countries:}
@@ -110,12 +105,12 @@ The analysis evaluated the relationship between manufacturing employment and GDP
 \item \textbf{GDP per capita:} Mean of 36,008.51 USD, with a standard deviation of 21,577.48 USD, indicating greater economic stability and higher income levels.
 \end{itemize}
 
-\subsection{Correlation Analysis}
-A correlation test will be conducted to compare developing to developed countries and economies, and we will graph our two main variables, GDP and manufacturing employment.
-\begin{itemize}
-\item \textbf{Developing Countries:} The correlation between manufacturing employment share and GDP per capita was \textbf{0.2710}, with a p-value of 0.0000, indicating a positive relationship. This suggests that higher manufacturing employment shares are associated with higher GDP per capita, reinforcing the importance of industrialization in early stages of economic development.
-\item \textbf{Developed Countries:} The correlation between manufacturing employment share and GDP per capita was \textbf{-0.3601}, with a p-value of 0.0000, indicating a statistically significant negative relationship. This reflects the shift toward service-oriented economies in developed nations, where GDP growth continues despite declining manufacturing employment.
-\end{itemize}
+
+
+\section{Results}
+\label{sec:result}
+
+The analysis evaluated the relationship between manufacturing employment and GDP per capita across developed and developing countries from 1990 to 2019.As manufacturing employment decreases, GDP increases, which indicates a negative relationship between manufacturing employment and GDP. The null hypothesis that goes along with our hypothesis is that there is no relationship between manufacturing employment and GDP. Descriptive statistics revealed distinct patterns between these two groups, reflecting their varying stages of industrialization and economic growth.
 
 \subsection{Graphical Trends}
 
@@ -152,6 +147,14 @@ A correlation test will be conducted to compare developing to developed countrie
 
 \item Manufacturing employment shares consistently declined over the study period, reflecting ongoing de-industrialization. Despite this, GDP per capita showed steady growth, highlighting the role of advanced industries, automation, and high-productivity sectors in sustaining economic progress.
 \end{itemize}
+
+\subsection{Correlation Analysis}
+A correlation test will be conducted to compare developing to developed countries and economies, and we will graph our two main variables, GDP and manufacturing employment.
+\begin{itemize}
+\item \textbf{Developing Countries:} The correlation between manufacturing employment share and GDP per capita was \textbf{0.2710}, with a p-value of 0.0000, indicating a positive relationship. This suggests that higher manufacturing employment shares are associated with higher GDP per capita, reinforcing the importance of industrialization in early stages of economic development.
+\item \textbf{Developed Countries:} The correlation between manufacturing employment share and GDP per capita was \textbf{-0.3601}, with a p-value of 0.0000, indicating a statistically significant negative relationship. This reflects the shift toward service-oriented economies in developed nations, where GDP growth continues despite declining manufacturing employment.
+\end{itemize}
+
 
 \subsection{Interpretation of Results}
 
