--- a/data.tex
+++ b/data.tex
@@ -62,10 +62,10 @@ Open the web browser, navigate to the Our World in Data website, \href{https://g
 
 \end{enumerate}
 
-Below these sections are code examples that are useful for importing that data, depending on the language used. We followed the last example, using Stata to process our data. The replication package is further code. 
+Below these sections are code examples that are useful for importing that data, depending on the language used. We followed the last example, using Stata to process our data. The replication package has further code. 
 
     \subsection{Data Acquisition 2 (Our World in Data - GDP per Capita)}
-Since the data for the second "GDP per Capita" was on the same site, it was logical to follow the same steps that were implemented to get the data for variable one. 
+Since the data for the second "GDP per capita" were on the same site, it was logical to follow the same steps that were implemented to obtain the data for variable one. 
 
 All data links are stored in the \href{https://github.com/ecn310/course-project-development/issues/15#issuecomment-2486305999}{Github issues section of "Re-tracking"} 
 
